@@ -7,7 +7,6 @@ usage() {
     echo -e " * buster           * amd64"
     echo -e " * bullseye         * armhf"
     echo -e " * bookworm         * arm64"
-    echo -e " * bionic"
     echo -e " * focal"
     echo -e " * jammy"
     echo -e " * kinetic"
@@ -35,11 +34,6 @@ case ${cli_release} in
         release="debian:bookworm"
         gcc_version="12"
         llvm_version="15"
-    ;;
-    'bionic')
-        release="ubuntu:bionic"
-        gcc_version="7"
-        llvm_version="10"
     ;;
     'focal')
         release="ubuntu:focal"
